test/sema/explicitly-typed-variable.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:13: error: cannot assign 'bool' to 'int'
    int i = false;
}
